[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/Player/torch_light.png" type="Texture" id=1]
[ext_resource path="res://assets/Background/scroll_bg.png" type="Texture" id=2]
[ext_resource path="res://assets/Background/summary_bg.png" type="Texture" id=3]
[ext_resource path="res://assets/Fonts/Minecraft.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/Fonts/Main_menu.tres" type="DynamicFont" id=5]
[ext_resource path="res://src/Scripts/Summary.gd" type="Script" id=6]

[sub_resource type="CanvasItemMaterial" id=2]
blend_mode = 4
light_mode = 2

[sub_resource type="DynamicFont" id=1]
size = 55
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 4 )

[node name="Summary" type="Control"]
script = ExtResource( 6 )

[node name="Stones_bg" type="TextureRect" parent="."]
material = SubResource( 2 )
margin_left = 2.0
margin_top = 3.0
margin_right = 1022.0
margin_bottom = 616.0
texture = ExtResource( 3 )
expand = true
flip_h = true

[node name="Scroll" type="TextureRect" parent="Stones_bg"]
self_modulate = Color( 0.34902, 0.34902, 0.34902, 1 )
margin_left = 102.0
margin_top = 572.0
margin_right = 1102.0
margin_bottom = 1824.0
rect_rotation = -89.9999
rect_scale = Vector2( 0.582609, 0.6522 )
texture = ExtResource( 2 )
flip_h = true

[node name="Summary_text" type="RichTextLabel" parent="."]
self_modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = 405.0
margin_top = 16.0
margin_right = 687.0
margin_bottom = 143.0
size_flags_stretch_ratio = 6.69
custom_fonts/normal_font = SubResource( 1 )
text = " 
 Summary"
fit_content_height = true
scroll_active = false

[node name="Monster_text" type="RichTextLabel" parent="."]
self_modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = 245.0
margin_top = 137.0
margin_right = 585.0
margin_bottom = 264.0
size_flags_stretch_ratio = 6.69
custom_fonts/normal_font = ExtResource( 5 )
text = " 
Monster was a..."
fit_content_height = true
scroll_active = false

[node name="Monster_result" type="RichTextLabel" parent="."]
self_modulate = Color( 1, 0, 0, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = 565.0
margin_top = 177.0
margin_right = 867.0
margin_bottom = 294.0
size_flags_stretch_ratio = 6.69
custom_fonts/normal_font = ExtResource( 5 )
text = "VAMPIRE"
fit_content_height = true
scroll_active = false

[node name="Light2D" type="Light2D" parent="."]
show_behind_parent = true
position = Vector2( 509, 883 )
z_index = -2
z_as_relative = false
texture = ExtResource( 1 )
texture_scale = 22.16
color = Color( 1, 0.862745, 0.678431, 1 )
energy = 3.23
shadow_enabled = true
shadow_item_cull_mask = 0

[node name="Tween" type="Tween" parent="."]

[node name="Tween_inv" type="Tween" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 512, 298 )
rotation = -1.57079
scale = Vector2( 0.582609, 0.6522 )
current = true

[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="tween_completed" from="Tween_inv" to="." method="_on_Tween_inv_tween_completed"]
